# instarest

./: .gitignore  manage.py  pyproject.toml
instarest/: asgi.py  settings.py  urls.py  wsgi.py
service_creator/: admin.py  apps.py  models.py  urls.py  views.py
service_creator/migrations/: 0001_initial.py  0002_endpoint_validate_request.py  0003_service_service_identifier.py
service_provider/: urls.py  views.py
