[tool.poetry]
name = "instarest"
version = "0.1.0"
description = ""
authors = ["Prabakaran Santhanam <praba230890@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "4.0.4"
djangorestframework = "^3.13.1"
Markdown = "^3.3.6"
django-filter = "^21.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
